syntax = "proto3";

package email_proto;

option go_package = "github.com/Guise322/ozon-exercises/email_bot/protos/email.proto";

message EmailRequest {
    int64 id = 1;
}

message EmailResponse {
    int64 id = 1;
    string from = 2;
    string to = 3;
    string text = 4;
}

service Email {
    rpc GetEmail (EmailRequest) returns (EmailResponse);
}